--- a/style.css
+++ b/style.css
@@ -1,16 +1,46 @@
-* {
+@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
+
+:root {
+  --main-color: #037fff;
+  --bg-dark: #10121b;
+  --secondary-dark: #2e344e;
+}
+
+*,
+*::before,
+*::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 body {
+  height: 100vh;
   width: 100vw;
-  font-family: sans-serif;
-  clear: both;
-  font-size: 16px;
-  font-weight: 500;
 }
+
+svg {
+  width: 20px;
+  height: 20px;
+  stroke: currentColor;
+  stroke-width: 2;
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  color: #ffffff;
+}
+
+.darkmode {
+  background: var(--bg-dark);
+  color: #ffffff;
+}
+
+/* * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+} */
 
 header,
 footer {
@@ -32,7 +62,7 @@ header button {
 
 header button:hover {
   border-radius: 3px;
-  background-color: #2980b9;
+  background-color: var(--main-color);
   color: #fff;
   cursor: pointer;
 }
@@ -46,7 +76,7 @@ footer {
 }
 
 .monthYear__year {
-  color: #2980b9;
+  color: var(--main-color);
 }
 
 .weekdays {
@@ -63,6 +93,7 @@ footer {
   align-items: center;
   padding: 0 1rem;
   font-weight: 600;
+  color: var(--secondary-dark);
 }
 
 .calendar {
@@ -70,6 +101,7 @@ footer {
   height: calc(100vh - 150px);
   display: grid;
   grid-template-columns: repeat(7, 1fr);
+  color: var(--secondary-dark);
 }
 
 .day {
@@ -82,13 +114,13 @@ footer {
 .day:hover,
 .day.active {
   cursor: pointer;
-  box-shadow: rgba(41, 128, 185, 0.2) 0px 48px 100px 0px;
-  box-shadow: rgba(41, 128, 185, 0.2) 0px 30px 25px -5px,
-    inset rgba(41, 128, 185, 0.2) 0px 48px 10px -5px;
+  box-shadow: rgba(3, 127, 255, 0.2) 0px 48px 100px 0px;
+  box-shadow: rgba(3, 127, 255, 0.2) 0px 0px 25px -5px,
+    inset rgba(3, 127, 255, 0.2) 0px 48px 10px -5px;
 }
 
 .day.paddingDay {
-  background-color: #ddd;
+  background-color: var(--secondary-dark);
   color: #333;
   cursor: not-allowed;
   border: none;
