--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ footer {
 
 .day {
   padding: 1rem;
-  border: 1px solid #ccc;
+  outline: 1px solid #ccc;
   font-weight: 600;
   transition: all 0.5s ease;
 }
