--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
+@import url("./assets/styles/header.css");
+@import url("./assets/styles/footer.css");
+@import url("./assets/styles/weekdays.css");
+@import url("./assets/styles/calendar.css");
+@import url("./assets/styles/event.css");
+@import url("./assets/styles/darkmode.css");
 
 :root {
   --main-color: #037fff;
@@ -34,98 +40,4 @@ svg {
 .darkmode {
   background: var(--bg-dark);
   color: #ffffff;
-}
-
-/* * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-} */
-
-header,
-footer {
-  width: 100%;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-}
-
-header button {
-  padding: 0.5rem 1rem;
-  border: none;
-  outline: none;
-  background-color: #ccc;
-  color: #111;
-}
-
-header button:hover {
-  border-radius: 3px;
-  background-color: var(--main-color);
-  color: #fff;
-  cursor: pointer;
-}
-
-footer {
-  color: #333;
-}
-
-.monthYear {
-  font-weight: 600;
-}
-
-.monthYear__year {
-  color: var(--main-color);
-}
-
-.weekdays {
-  width: 100%;
-  height: 50px;
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-}
-
-.weekday {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  align-items: center;
-  padding: 0 1rem;
-  font-weight: 600;
-  color: var(--secondary-dark);
-}
-
-.calendar {
-  width: 100%;
-  height: calc(100vh - 150px);
-  display: grid;
-  grid-template-columns: repeat(7, 1fr);
-  color: var(--secondary-dark);
-}
-
-.day {
-  padding: 1rem;
-  outline: 1px solid #ccc;
-  font-weight: 600;
-  transition: all 0.5s ease;
-}
-
-.day:hover,
-.day.active {
-  cursor: pointer;
-  box-shadow: rgba(3, 127, 255, 0.2) 0px 48px 100px 0px;
-  box-shadow: rgba(3, 127, 255, 0.2) 0px 0px 25px -5px,
-    inset rgba(3, 127, 255, 0.2) 0px 48px 10px -5px;
-}
-
-.day.paddingDay {
-  background-color: var(--secondary-dark);
-  color: #333;
-  cursor: not-allowed;
-  border: none;
-}
-
-.day.paddingDay:hover {
-  box-shadow: none;
 }
