--- a/style.css
+++ b/style.css
@@ -1,29 +1,15 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
-@import url("./assets/styles/header.css");
-@import url("./assets/styles/footer.css");
-@import url("./assets/styles/weekdays.css");
-@import url("./assets/styles/calendar.css");
-@import url("./assets/styles/event.css");
-@import url("./assets/styles/darkmode.css");
-
-:root {
-  --main-color: #037fff;
-  --bg-dark: #10121b;
-  --secondary-dark: #2e344e;
-}
-
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
 }
 
 body {
-  height: 100vh;
-  width: 100vw;
+  background: black;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 svg {
@@ -34,10 +20,173 @@ svg {
   fill: none;
   stroke-linecap: round;
   stroke-linejoin: round;
-  color: #ffffff;
+  color: inherit;
 }
 
-.darkmode {
-  background: var(--bg-dark);
-  color: #ffffff;
+header,
+footer {
+  width: 100%;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+}
+
+footer {
+  color: #505050;
+}
+
+.date small {
+  color: #3867d6;
+}
+
+.controls {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.controls button {
+  cursor: pointer;
+  border: 1px solid #202020;
+  color: white;
+  background: black;
+  width: 50px;
+  height: 40px;
+}
+
+.controls button:hover svg {
+  color: #3867d6;
+}
+
+.weekdays {
+  width: 100%;
+  height: 70px;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  border-top: 1px solid #202020;
+  border-bottom: 1px solid #202020;
+}
+
+.weekday {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-right: 1px solid #202020;
+}
+
+.weekday:last-child {
+  border-right: none;
+}
+
+main {
+  width: 100%;
+  height: calc(100vh - (70px + 70px + 70px));
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.day {
+  border-bottom: 1px solid #202020;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  width: 100%;
+  overflow: hidden;
+}
+
+.day .event {
+  background: rgb(56, 103, 214);
+  color: white;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 1rem;
+  align-items: center;
+  overflow: hidden;
+  justify-content: stretch;
+}
+
+.current_day {
+  box-shadow: 0 0 5px 1px rgb(56, 103, 214);
+}
+
+.padding_day {
+  border-bottom: 1px solid #202020;
+  border-right: 1px solid #202020;
+}
+
+.day:nth-child(odd) {
+  border-right: 1px solid #202020;
+}
+
+.day:nth-child(even) {
+  border-right: 1px solid #202020;
+}
+
+.day:nth-child(7),
+.day:nth-child(14),
+.day:nth-child(21),
+.day:nth-child(28) {
+  border-right: none;
+}
+
+dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
+  display: none;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 1rem;
+  min-width: 300px;
+  min-height: 300px;
+  width: 500px;
+  border-radius: 5px;
+}
+
+dialog input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #202020;
+  color: black;
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+dialog textarea {
+  max-width: calc(500px - 2.5rem);
+  min-width: 300px;
+  height: 250px;
+  max-height: 250px;
+  padding: 1rem;
+  font-family: inherit;
+  border: 1px solid #202020;
+  border-radius: 5px;
+}
+
+dialog button[data-close-new-event-modal-btn],
+dialog button[data-close-event-modal-btn] {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+  border: 1px solid #202020;
+  color: black;
+  border: none;
+  background: transparent;
+}
+
+dialog button {
+  cursor: pointer;
+  border: 1px solid #202020;
+  color: white;
+  border: 1px solid black;
+  height: 40px;
+  background: black;
 }
