--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,7 +181,7 @@ header nav button:hover {
   background: var(--weekend-bg);
 }
 
-.day .addNewTodoBtn {
+.day .addNewDataBtn {
   position: absolute;
   bottom: 10px;
   right: 10px;
@@ -197,122 +197,63 @@ header nav button:hover {
   cursor: pointer;
 }
 
-.day .addNewTodoBtn svg {
+.day .addNewDataBtn svg {
   width: 15px;
   height: 15px;
 }
 
-dialog[data-new-todo] {
-  position: absolute;
+.viewDataContainer {
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 300px;
+  height: 90dvh;
+  width: 894px;
+  max-width: 894px;
+  border-radius: 3px;
+  box-shadow: 0 0 5px 1px var(--primary-clr);
+  overflow-y: auto;
+  /* display: none; */
+}
+
+.viewDataContainer .viewDataControls {
+  height: 70px;
   width: 100%;
-  max-width: 500px;
-  height: 500px;
-  background-color: white;
-}
-
-dialog[data-new-todo] .dialog-container h2 {
-  font-size: 1.1rem;
-}
-
-dialog[data-new-todo] .dialog-container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  padding: 1rem;
-}
-
-dialog[data-new-todo] .dialog-container textarea {
-  max-width: calc(500px - 2rem);
-  width: calc(500px - 2rem);
-  max-height: 250px;
-  height: 250px;
-  resize: none;
-  font-family: inherit;
-  padding: 0.5rem;
-  border: 1px solid var(--border-clr);
-}
-
-dialog[data-new-todo] .dialog-container > button {
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  background: none;
-  color: black;
-  border: none;
-}
-
-dialog[data-new-todo] .dialog-container > div {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-dialog[data-new-todo] .dialog-container > div button {
-  height: 40px;
-  width: max-content;
-  padding: 1rem 0.5rem;
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 1rem;
+  padding-inline: 2rem;
+  background: var(--weekend-bg);
 }
 
-dialog[data-new-todo] .dialog-container > div button:first-child {
-  background: var(--primary-clr);
-  border-radius: 3px;
-  color: white;
-  border: none;
+.viewDataContainer .viewDataControls button {
+  height: 35px;
+  width: 35px;
   cursor: pointer;
 }
 
-dialog[data-new-todo] .dialog-container > div button:first-child {
-  background: var(--primary-clr);
-  border-radius: 3px;
+.viewDataContainer .viewDataControls button[toggle-edit-day-data-btn] {
   color: white;
   border: none;
-  cursor: pointer;
+  background: var(--past-day-bg);
+  border-radius: 3px;
 }
 
-dialog[data-new-todo] .dialog-container > div button:last-child {
-  background: var(--danger-clr);
-  border-radius: 3px;
+.viewDataContainer .markdown-body,
+.viewDataContainer #markdownEditor {
+  height: calc(100% - 70px);
+  width: 100%;
+  padding: 2rem;
+  /* display: none; */
+}
+
+.viewDataContainer .markdown-body {
+  min-height: calc(100% - 70px);
+  height: max-content;
+}
+
+.viewDataContainer #markdownEditor {
+  background: black;
   color: white;
-  border: none;
-  cursor: pointer;
-}
-
-.todos {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100dvw;
-  height: 100dvh;
-  background: hsla(0, 0%, 3%, 0.5);
-  display: grid;
-  gap: 1rem;
-  grid-template-columns: repeat(7, 1fr);
-  padding: 1rem;
-  display: none;
-}
-
-.todos .todo {
-  width: 350px;
-  height: 350px;
-  background: white;
-  color: black;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  border-radius: 3px;
-}
-
-.todos .todo:hover {
-  box-shadow: 0 0 5px 1px var(--primary-clr);
+  font-family: inherit;
+  font-size: inherit;
 }
