feat: add delete functionality to calendar app

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
   --primary-clr: hsl(210, 100%, 51%);
   --danger-clr: hsl(6, 63%, 46%);
   --success-clr: hsl(145, 63%, 49%);
+  --warn-clr: hsl(48, 89%, 50%);
   --border-clr: hsl(0, 0%, 22%);
   --past-day-bg: hsl(0, 0%, 7%);
   --weekend-bg: hsl(0, 0%, 13%);
@@ -270,6 +271,10 @@ header nav button:hover {
 
 .viewDataContainer .viewDataControls button[save-day-data-btn] {
   background: var(--success-clr);
+}
+
+.viewDataContainer .viewDataControls button[delete-day-data-btn] {
+  background: var(--warn-clr);
 }
 
 .viewDataContainer .markdown-body,
