--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,22 @@
 :root {
+  color-scheme: light dark;
+
   --primary-clr: hsl(210, 100%, 51%);
   --danger-clr: hsl(6, 63%, 46%);
   --success-clr: hsl(145, 63%, 49%);
   --warn-clr: hsl(48, 89%, 50%);
-  --border-clr: hsl(0, 0%, 22%);
-  --past-day-bg: hsl(0, 0%, 7%);
-  --weekend-bg: hsl(0, 0%, 13%);
+
+  --light-bg: hsl(0, 0%, 100%);
+  --light-weekend-bg: hsl(0, 0%, 55%);
+  --light-past-day-bg: hsl(0, 0%, 50%);
+  --light-clr: hsl(0, 0%, 0%);
+  --light-border-clr: hsl(0, 0%, 70%);
+
+  --dark-bg: hsl(0, 0%, 0%);
+  --dark-weekend-bg: hsl(0, 0%, 13%);
+  --dark-past-day-bg: hsl(0, 0%, 7%);
+  --dark-clr: hsl(0, 0%, 100%);
+  --dark-border-clr: hsl(0, 0%, 22%);
 }
 
 *,
@@ -18,7 +29,7 @@
 
 body,
 html {
-  background-color: black;
+  background: light-dark(var(--light-bg), var(--dark-bg));
   font-size: 14px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -26,7 +37,7 @@ html {
   height: 100vh;
   display: grid;
   grid-template-rows: 70px 70px 1fr;
-  color: white;
+  color: light-dark(#000000, #ffffff);
 }
 
 svg {
@@ -41,7 +52,7 @@ svg {
 }
 
 input {
-  border: 1px solid var(--border-clr);
+  border: 1px solid light-dark(var(--light-border-clr), var(--dark-border-clr));
   border-radius: 3px;
   height: 35px;
   padding: 0.5rem 1rem;
@@ -92,8 +103,8 @@ header nav button {
   height: 40px;
   width: 55px;
   background-color: transparent;
-  border: 1px solid var(--border-clr);
-  color: white;
+  border: 1px solid light-dark(var(--light-border-clr), var(--dark-border-clr));
+  color: light-dark(var(--light-clr), var(--dark-clr));
 }
 
 header nav button:hover {
@@ -107,8 +118,10 @@ header nav button:hover {
   height: 70px;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
-  border-top: 1px solid var(--border-clr);
-  border-bottom: 1px solid var(--border-clr);
+  border-top: 1px solid
+    light-dark(var(--light-border-clr), var(--dark-border-clr));
+  border-bottom: 1px solid
+    light-dark(var(--light-border-clr), var(--dark-border-clr));
 }
 
 .weekdays .weekday {
@@ -120,11 +133,13 @@ header nav button:hover {
 }
 
 .weekdays .weekday:nth-child(odd) {
-  border-right: 1px solid var(--border-clr);
+  border-right: 1px solid
+    light-dark(var(--light-border-clr), var(--dark-border-clr));
 }
 
 .weekdays .weekday:nth-child(even) {
-  border-right: 1px solid var(--border-clr);
+  border-right: 1px solid
+    light-dark(var(--light-border-clr), var(--dark-border-clr));
 }
 
 .calendar {
@@ -134,7 +149,8 @@ header nav button:hover {
 
 .day {
   position: relative;
-  border-bottom: 1px solid var(--border-clr);
+  border-bottom: 1px solid
+    light-dark(var(--light-border-clr), var(--dark-border-clr));
   padding: 1rem;
   display: flex;
   flex-direction: column;
@@ -145,20 +161,23 @@ header nav button:hover {
 }
 
 .day:nth-child(odd) {
-  border-right: 1px solid var(--border-clr);
+  border-right: 1px solid
+    light-dark(var(--light-border-clr), var(--dark-border-clr));
 }
 
 .day:nth-child(even) {
-  border-right: 1px solid var(--border-clr);
+  border-right: 1px solid
+    light-dark(var(--light-border-clr), var(--dark-border-clr));
 }
 
 .day:last-child {
-  border-right: 1px solid var(--border-clr);
+  border-right: 1px solid
+    light-dark(var(--light-border-clr), var(--dark-border-clr));
 }
 
 .day.pastMonth,
 .day.pastDays {
-  background: var(--past-day-bg);
+  background: light-dark(var(--light-past-day-bg), var(--dark-past-day-bg));
 }
 
 .day.currentDay,
@@ -181,7 +200,7 @@ header nav button:hover {
 }
 
 .day.weekend {
-  background: var(--weekend-bg);
+  background: light-dark(var(--light-weekend-bg), var(--dark-weekend-bg));
 }
 
 .day .addNewDataBtn {
@@ -191,9 +210,9 @@ header nav button:hover {
   width: 35px;
   height: 35px;
   border-radius: 50%;
-  color: white;
-  background: var(--past-day-bg);
-  border: 1px solid var(--past-day-bg);
+  color: light-dark(var(--light-clr), var(--dark-clr));
+  background: light-dark(var(--light-bg), var(--dark-bg));
+  border: 1px solid light-dark(var(--light-border-clr), var(--dark-border-clr));
   align-items: center;
   justify-content: center;
   cursor: pointer;
@@ -243,7 +262,9 @@ header nav button:hover {
   align-items: center;
   padding-inline: 2rem;
   gap: 2rem;
-  background: var(--weekend-bg);
+  background: light-dark(var(--light-bg), var(--dark-bg));
+  border-bottom: 1px solid
+    light-dark(var(--light-border-clr), var(--dark-border-clr));
 }
 
 .viewDataContainer .viewDataControls button {
@@ -291,7 +312,7 @@ header nav button:hover {
 }
 
 .viewDataContainer #markdownEditor {
-  background: black;
+  background: light-dark(var(--light-bg), var(--dark-bg));
   color: white;
   font-family: inherit;
   font-size: inherit;
