--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -99,6 +99,32 @@ header nav > label {
   cursor: pointer;
 }
 
+header .searchForm {
+  width: 100%;
+  max-width: 500px;
+  display: flex;
+  height: 40px;
+  align-items: center;
+}
+
+header .searchForm input {
+  flex: 1;
+  height: 100%;
+  height: 40px;
+  border: none;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+}
+
+header .searchForm button {
+  height: 38px;
+  width: 38px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  border: none;
+  background-color: var(--primary-clr);
+}
+
 header nav button {
   height: 40px;
   width: 55px;
