Fix the bug that parse the markdown from existing one; Fix the bug when you view the search result on the markdown; Add hover style to the search result

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -162,6 +162,11 @@ header .search .searchResults .searchResult {
   padding-inline: 2rem;
 }
 
+header .search .searchResults .searchResult:hover {
+  color: var(--primary-clr-900);
+  cursor: pointer;
+}
+
 header .search input {
   height: 35px;
   border: var(--border);
